# stella_vslam

src/stella_vslam/: global_optimization_module.cc  mapping_module.cc  system.cc  tracking_module.cc
src/stella_vslam/benchmark/: timer.h
src/stella_vslam/feature/: CMakeLists.txt  HashSIFT.cpp  orb_extractor.cc  orb_extractor.h  orb_params.cc  orb_params.h
src/stella_vslam/match/: bow_tree.cc  projection.cc  stereo.cc
src/stella_vslam/module/: initializer.cc  loop_detector.cc  relocalizer.cc
src/stella_vslam/optimize/: local_bundle_adjuster_g2o.cc  pose_optimizer_g2o.cc
